[package]
name = "mee_file"
version = "0.1.0"
authors = ["shadow <funnyzpc@gmail.com>"]
edition = "2018"

[dependencies]
actix-multipart = "0.3"
actix-web = "3"
futures = "0.3.15"
sanitize-filename = "0.3.0"
actix-files = "0.5.0"
hmac-sha512 = "0.1.9"
hex = "0.4.3"
chrono = "0.4.19"
serde = { version = "1.0.126", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
# uuid = { version = "0.8", features = ["serde", "v4"] }
# see: https://github.com/emreyalvac/actix-web-jwt
# jsonwebtoken = "7.2.0"
log = "0.4"

#[profile.release]
#lto = true